# ecp/server/api/internal/logic/connectorMachine/accesshelpers.go
@@ -6,7 +6,7 @@ import (
 )
 
 func authorizationRequest(value types.AuthorizeReq) domain.AuthorizationRequest {
-	return domain.AuthorizationRequest{EnterpriseID: value.EnterpriseID, ApplicationInstanceID: value.ApplicationInstanceID, PrincipalID: value.PrincipalID, PrincipalKind: value.PrincipalKind, IdentityProvider: value.IdentityProvider, PolicySubject: value.PolicySubject, DirectGroupIDs: value.DirectGroupIDs, DirectGroupVersion: value.DirectGroupVersion, PolicyID: value.PolicyID, Action: value.Action, ResourceID: value.ResourceID, ResourceVersion: value.ResourceVersion}
+	return domain.AuthorizationRequest{EnterpriseID: value.EnterpriseID, ApplicationInstanceID: value.ApplicationInstanceID, PrincipalID: value.PrincipalID, PrincipalKind: value.PrincipalKind, IdentityProvider: value.IdentityProvider, PolicySubject: value.PolicySubject, DirectGroupIDs: value.DirectGroupIDs, DirectGroupVersion: value.DirectGroupVersion, Action: value.Action, ResourceID: value.ResourceID, ResourceVersion: value.ResourceVersion}
 }
 func decisionResponse(value domain.AuthorizationDecision) types.AuthorizationDecisionResp {
 	return types.AuthorizationDecisionResp{Allow: value.Allow, Reason: value.Reason, LifecycleVersion: value.LifecycleVersion, IdentitySyncVersion: value.IdentitySyncVersion, IdentityFreshnessDeadline: value.IdentityFreshnessDeadline.Unix(), PolicyVersion: value.PolicyVersion, AuthorizedResourceVersion: value.AuthorizedResourceVersion, SecurityConfigVersion: value.SecurityConfigVersion}
