# ecp/server/internal/domain/policy.go
@@ -3,6 +3,7 @@ package domain
 type PolicyProjection struct {
 	Base
 	ApplicationInstanceID          string   `gorm:"column:application_instance_id;type:varchar(36);not null"`
+	CasdoorPermissionID            string   `gorm:"column:casdoor_permission_id;type:varchar(255);not null"`
 	CasdoorPolicyIDs               []string `gorm:"column:casdoor_policy_ids;type:text;serializer:json;not null"`
 	NormalizedHash                 string   `gorm:"column:normalized_hash;type:char(64);not null"`
 	ManifestVersion, PolicyVersion uint64
